--- a/package.json
+++ b/package.json
@@ -9,17 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
+    "@tanstack/react-query": "^5.4.3",
+    "date-fns": "^2.30.0",
+    "formik": "^2.4.5",
+    "next": "14.0.1",
     "react": "^18",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-time-picker": "^6.5.2",
+    "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^3.9.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
