--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@tanstack/react-query": "^5.4.3",
+    "clipboard-copy": "^4.0.1",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "next": "14.0.1",
